--- a/assets/css/nav.css
+++ b/assets/css/nav.css
@@ -1,14 +1,3 @@
-html {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
-}
-
 nav {
     display: flex;
     flex-direction: row;
@@ -18,6 +7,16 @@ nav {
     line-height: 2.5;
     font-size: large;
     box-shadow: 0px 3px 5px grey;
+}
+
+nav .container-nav {
+    display: flex;
+    justify-content: center;
+    flex: row;
+    margin-left: auto;
+    width: 100%;
+    max-width: 1000px;
+    margin-right: auto;
 }
 
 nav .left-nav {
@@ -97,6 +96,10 @@ nav a {
         font-size: x-large;
     }
 
+    nav .container-nav {
+        justify-content: flex-start;
+    }
+
     nav .left-nav {
         margin-left: 1em;
     }
@@ -133,12 +136,12 @@ nav ul {
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
+    -webkit-transition: 0.5s ease-in-out;
+    -moz-transition: 0.5s ease-in-out;
+    -o-transition: 0.5s ease-in-out;
+    transition: 0.5s ease-in-out;
     cursor: pointer;
-    transform: scale(0.7)
+    transform: scale(0.7);
 }
 
 #nav-icon span {
@@ -154,10 +157,10 @@ nav ul {
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
     transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
+    -webkit-transition: 0.25s ease-in-out;
+    -moz-transition: 0.25s ease-in-out;
+    -o-transition: 0.25s ease-in-out;
+    transition: 0.25s ease-in-out;
 }
 
 #nav-icon span:nth-child(1) {
