--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,132 +1,145 @@
-.carousel {
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-top: 4%;
-    margin-bottom: 4%;
-    max-width: 1200px;
-}
-
-ul.slides {
-    display: block;
-    position: relative;
-    height: 600px;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    list-style: none;
-}
-
-.slides * {
-    user-select: none;
-    -ms-user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -webkit-touch-callout: none;
-}
-
-ul.slides input {
-    display: none;
-}
-
-.slide-container {
-    display: block;
-}
-
-.slide-image {
-    display: block;
-    position: absolute;
+.slider-image {
+    background-size: cover;
+    background-position: center;
     width: 100%;
-    height: 100%;
-    top: 0;
-    opacity: 0;
-    transition: all 0.7s ease-in-out;
+    height: 400px;
 }
-
-.slide-image img {
-    width: auto;
-    min-width: 100%;
-    height: 100%;
-}
-
-.carousel-controls {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-    font-size: 100px;
-    line-height: 600px;
-    color: #fff;
-}
-
-.carousel-controls label {
-    display: none;
-    position: absolute;
-    padding: 0 20px;
-    opacity: 0;
-    transition: opacity 0.2s;
-    cursor: pointer;
-}
-
-.slide-image:hover + .carousel-controls label {
-    opacity: 0.5;
-}
-
-.carousel-controls label:hover {
-    opacity: 1;
-}
-
-.carousel-controls .prev-slide {
-    width: 49%;
-    text-align: left;
-    left: 0;
-}
-
-.carousel-controls .next-slide {
-    width: 49%;
-    text-align: right;
-    right: 0;
-}
-
-.carousel-dots {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 20px;
-    z-index: 999;
+.carousel {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    width: 90%;
+    max-width: 1000px;
     text-align: center;
 }
 
-.carousel-dots .carousel-dot {
+.carousel-inner {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+}
+
+.carousel-inner > .item {
+    position: relative;
+    display: none;
+    animation: 0.5s ease-in-out;
+}
+
+.carousel-inner > .active,
+.carousel-inner > .next {
+    display: block;
+}
+
+.carousel-inner > .next {
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.carousel-inner > .to-left {
+    animation-name: left;
+}
+
+.carousel-inner > .from-right {
+    animation-name: right;
+}
+
+.carousel-inner > .to-right {
+    animation-name: right;
+    animation-direction: reverse;
+}
+
+.carousel-inner > .from-left {
+    animation-name: left;
+    animation-direction: reverse;
+}
+
+.container {
+    margin: 0 auto;
+}
+
+blockquote {
+    padding: 10px 20px;
+    margin: 30px 90px;
+    font-size: 32px;
+}
+
+.author {
+    margin: 0;
+    opacity: 0.5;
+}
+
+.carousel-control span {
+    font-size: 7em;
+    color: white;
+    justify-content: center;
+}
+
+.carousel-control.left {
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
+    margin-top: 8em;
+    left: 0;
+}
+
+.carousel-control.right {
+    position: absolute;
+    z-index: 1;
+    cursor: pointer;
+    margin-top: 8em;
+    right: 0;
+}
+
+.carousel-indicators {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    padding-left: 0;
+    margin: 0;
+    list-style: none;
+    transform: translateX(-50%);
+}
+
+.carousel-indicators li {
     display: inline-block;
     width: 10px;
     height: 10px;
-    border-radius: 50%;
-    background-color: #fff;
-    opacity: 0.5;
-    margin: 6px;
+    cursor: pointer;
+    border: 1px solid #ffffff;
+    border-radius: 10px;
 }
 
-input:checked + .slide-container .slide-image {
-    opacity: 1;
-    transform: scale(1);
-    transition: opacity 1s ease-in-out;
+.carousel-indicators li.active {
+    background-color: #ffffff;
 }
 
-input:checked + .slide-container .carousel-controls label {
-    display: block;
+@media (min-width: 992px) {
+    .container {
+        width: 970px;
+    }
 }
 
-input#img-1:checked ~ .carousel-dots label#img-dot-1,
-input#img-2:checked ~ .carousel-dots label#img-dot-2,
-input#img-3:checked ~ .carousel-dots label#img-dot-3,
-input#img-4:checked ~ .carousel-dots label#img-dot-4,
-input#img-5:checked ~ .carousel-dots label#img-dot-5,
-input#img-6:checked ~ .carousel-dots label#img-dot-6 {
-    opacity: 1;
+@media (min-width: 1200px) {
+    .container {
+        width: 1170px;
+    }
 }
 
-input:checked + .slide-container .nav label {
-    display: block;
+@keyframes left {
+    from {
+        left: 0;
+    }
+    to {
+        left: -100%;
+    }
+}
+
+@keyframes right {
+    from {
+        left: 100%;
+    }
+    to {
+        left: 0;
+    }
 }
