--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,12 @@ body {
 }
 
 footer {
+    margin: 3em;
+    display: flex;
+    justify-content: center;
+}
+
+h1 {
     display: flex;
     justify-content: center;
 }
