--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -60,13 +60,20 @@
 }
 
 blockquote {
-    padding: 10px 20px;
-    margin: 30px 90px;
+    position: absolute;
+    top: 0;
+    margin: 1em 0.5em 0 0.5em;
+    /* padding: 10px 20px; */
+    /* margin: 30px 90px; */
     font-size: 32px;
 }
 
 .author {
-    margin: 0;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-bottom: 3em;
     opacity: 0.5;
 }
 
