--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ h1 {
 }
 
 img {
-    box-shadow: 0px 0px 4px grey;
+    box-shadow: 0px 0px 4px black;
 }
 
 .active {
@@ -31,4 +31,24 @@ img {
 
 a {
     text-decoration: none;
+}
+
+/* Light mode */
+@media (prefers-color-scheme: light) {
+    body {
+        background-color: white;
+        color: black;
+    }
+}
+
+/* Dark mode */
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: rgb(46, 46, 46);
+        color: white;
+    }
+
+    a {
+        color: white;
+    }
 }
